Literal tab in JSONString fails https://bugs.webkit.org/show_bug.cgi?id=71772

Reviewed by Oliver Hunt.

rfc4627 does not allow literal tab characters in JSON source.

Source/JavaScriptCore:

* runtime/LiteralParser.cpp:
(JSC::isSafeStringCharacter):
    - do not allow literal tab in StrictJSON mode.

LayoutTests:

* fast/js/JSON-parse-expected.txt:
* fast/js/resources/JSON-parse.js:
(createTests.result):
    - Updated expected results.



Canonical link: https://commits.webkit.org/92447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104212 268f45cc-cd09-0410-ab3c-d52691b4dbfc